@@ -2470,6 +2470,7 @@ The time is measured in seconds."
         (handler-bind ((compiler-condition
                         (lambda (c) (push (make-compiler-note c) notes))))
           (measure-time-interval function))
+      (check-type successp boolean)
       (make-compilation-result (reverse notes) successp seconds))))
 
 (defslimefun compile-file-for-emacs (filename load-p)
